[package]
name = "argus_core"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argus_x25519 = { path = "../argus_x25519" }
argus_rand = { path = "../argus_rand" }
argus_sha2 = { path = "../argus_sha2" }
